<resources>
    <string name="app_name">EventTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_addEvent">Add Event</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!-- Strings related to Add Event -->
    <string name="hint_eventTitle">Event Title</string>
    <string name="hint_eventDescription">Description </string>
    <string name="button_addEvent">Add Event</string>
    <string name="save_event"> Save Event </string>
    <string name="enter_event_title"> Please enter a Event Title </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_event_image">Select Event Image</string>
    <string name="change_event_image">Change Event Image</string>
    <string name="button_chooseDate">Choose Date</string>
    <string name="enter_valid_end_date">End Date must not be before Start Date</string>

</resources>